--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,23 +2,75 @@ version: "2"
 
 services:
   otel-collector:
+    container_name: otel-collector
     image: otel/opentelemetry-collector-contrib:latest
     command: ["--config=/etc/otelcol.yaml"]
     volumes:
       - ./otelcol.yaml:/etc/otelcol.yaml
+    privileged: true
     ports:
-      - "1888:1888"  # pprof extension
-      - "8888:8888"  # Prometheus metrics exposed by the collector
-      - "8889:8889"  # Prometheus exporter metrics
-      - "13133:13133"  # health_check extension
-      - "4317:4317"  # OTLP gRPC receiver
-      - "55679:55679"  # zpages extension
-      - "4318:4318"  # OTLP HTTP receiver
+      - "8889:8889"
+      - "4317:4317"
+      - "4318:4318"
       
   prometheus:
+    container_name: prometheus
     image: quay.io/prometheus/prometheus:v2.34.0
     command: --config.file=/etc/prometheus.yaml --no-scrape.adjust-timestamps
     volumes:
       - ./prometheus.yaml:/etc/prometheus.yaml
     ports:
       - "9090:9090"
+
+  data-prepper:
+    image: opensearchproject/data-prepper:latest
+    container_name: data-prepper
+    volumes:
+      - ./dataprepper.yaml:/usr/share/data-prepper/pipelines/dataprepper.yaml
+    depends_on:
+      - opensearch
+      - otel-collector
+    ports:
+      - 21890:21890
+      - 21891:21891
+      - 21892:21892
+      - 4900:4900
+
+  opensearch:
+    image: opensearchproject/opensearch:latest
+    container_name: opensearch
+    environment:
+      - cluster.name=opensearch-cluster
+      - node.name=opensearch
+      - discovery.seed_hosts=opensearch
+      - cluster.initial_cluster_manager_nodes=opensearch
+      - bootstrap.memory_lock=true
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "DISABLE_INSTALL_DEMO_CONFIG=true"
+      - "DISABLE_SECURITY_PLUGIN=true"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    volumes:
+      - opensearch-data:/usr/share/opensearch/data
+    ports:
+      - 9200:9200
+      - 9600:9600
+
+  opensearch-dashboards:
+    image: opensearchproject/opensearch-dashboards:latest
+    container_name: opensearch-dashboards
+    ports:
+      - 5601:5601
+    expose:
+      - "5601"
+    environment:
+      - 'OPENSEARCH_HOSTS=["http://opensearch:9200"]'
+      - "DISABLE_SECURITY_DASHBOARDS_PLUGIN=true"
+
+volumes:
+  opensearch-data:
