--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,7 +1,7 @@
 global:
   scrape_interval: 1s
 scrape_configs:
-- job_name: opentelemetrycollector-gateway
+- job_name: opentelemetry-collector
   static_configs:
     - targets:
       - 0.0.0.0:8889
