--- a/otelcol.yaml
+++ b/otelcol.yaml
@@ -1,4 +1,50 @@
 receivers:
+  hostmetrics:
+    root_path: /hostfs
+    collection_interval: 10s
+    scrapers:
+      load:
+        metrics:
+          system.cpu.load_average.15m:
+            enabled: false
+          system.cpu.load_average.5m:
+            enabled: false
+          system.cpu.load_average.1m:
+            enabled: true
+      memory:
+        metrics:
+          system.memory.usage:
+            enabled: true
+          system.linux.memory.available:
+            enabled: false
+          system.memory.limit:
+            enabled: true
+          system.memory.utilization:
+            enabled: true
+      filesystem:
+        metrics:
+          system.filesystem.inodes.usage:
+            enabled: false
+          system.filesystem.usage:
+            enabled: true
+          system.filesystem.utilization:
+            enabled: true
+      network:
+        metrics:
+          system.network.connections:
+            enabled: true
+          system.network.dropped:
+            enabled: true
+          system.network.errors:
+            enabled: true
+          system.network.io:
+            enabled: true
+          system.network.packets:
+            enabled: true
+          system.network.conntrack.count:
+            enabled: false
+          system.network.conntrack.max:
+            enabled: false
   otlp:
     protocols:
       grpc:
@@ -6,23 +52,99 @@ receivers:
 
 
 processors:
+  resourcedetection:
+    detectors:
+      - env
+      - system
+    override: true
+    system:
+      resource_attributes:
+        host.arch:
+          enabled: true
+        host.name:
+          enabled: true
+        host.id:
+          enabled: true
+        host.ip:
+          enabled: true
+        host.mac:
+          enabled: true
+        host.cpu.vendor.id:
+          enabled: true
+        host.cpu.family:
+          enabled: true
+        host.cpu.model.id:
+          enabled: true
+        host.cpu.model.name:
+          enabled: true
+        host.cpu.stepping:
+          enabled: true
+        host.cpu.cache.l2.size:
+          enabled: true
+        os.description:
+          enabled: true
+        os.type:
+          enabled: true
+  metricstransform:
+    transforms:
+      - include: system.cpu.load_average.1m
+        action: update
+        new_name: infrastructure.cpu.load
+      - include: system.memory.usage
+        action: update
+        new_name: infrastructure.memory.usage
+      - include: system.memory.limit
+        action: update
+        new_name: infrastructure.memory.limit
+      - include: system.memory.utilization
+        action: update
+        new_name: infrastructure.memory.utilization
+      - include: system.filesystem.usage
+        action: update
+        new_name: infrastructure.disk.usage
+      - include: system.filesystem.utilization
+        action: update
+        new_name: infrastructure.disk.utilization
+      - include: system.network.connections
+        action: update
+        new_name: infrastructure.network.connections
+      - include: system.network.dropped
+        action: update
+        new_name: infrastructure.network.dropped
+      - include: system.network.errors
+        action: update
+        new_name: infrastructure.network.errors
+      - include: system.network.io
+        action: update
+        new_name: infrastructure.network.io
+      - include: system.network.packets
+        action: update
+        new_name: infrastructure.network.packets
   batch:
-    timeout: 10s
-    send_batch_size: 1024
+    send_batch_size: 512
+    send_batch_max_size: 1024
 
 exporters:
   debug:
     verbosity: detailed
   prometheus:
-    endpoint: "0.0.0.0:8889"
+    endpoint: 0.0.0.0:8889
   otlp/data-prepper:
-    endpoint: "0.0.0.0:21892"
+    endpoint: 0.0.0.0:21892
     tls:
       insecure: true
 
 service:
   pipelines:
     metrics:
-      receivers: [otlp]
-      processors: [batch]
-      exporters: [debug, prometheus] 
+      receivers:
+        - otlp
+        - hostmetrics
+      processors:
+        - resourcedetection
+        - metricstransform
+        - batch
+      exporters:
+        - debug
+        - prometheus
+        - otlp/data-prepper
