--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,7 +1,6 @@
 global:
   scrape_interval: 1s
 scrape_configs:
-- job_name: opentelemetry-collector
+- job_name: "otel-collector"
   static_configs:
-    - targets:
-      - 0.0.0.0:8889
+    - targets: ["otel-collector:8889"]
