--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     command: ["--config=/etc/otelcol.yaml"]
     volumes:
       - ./otelcol.yaml:/etc/otelcol.yaml
+      - /:/hostfs
     privileged: true
     ports:
       - "8889:8889"
@@ -26,9 +27,10 @@ services:
     image: opensearchproject/data-prepper:latest
     container_name: data-prepper
     volumes:
-      - ./dataprepper.yaml:/usr/share/data-prepper/pipelines/dataprepper.yaml
+      - ./dataprepper.yaml:/usr/share/data-prepper/pipelines/pipelines.yaml
     depends_on:
       - opensearch
+      - opensearch-dashboard
       - otel-collector
     ports:
       - 21890:21890
@@ -63,7 +65,7 @@ services:
 
   opensearch-dashboards:
     image: opensearchproject/opensearch-dashboards:latest
-    container_name: opensearch-dashboards
+    container_name: opensearch-dashboard
     ports:
       - 5601:5601
     expose:
